# WASM-CommP

./: Cargo.toml  index.html  index.js
fixtures/car_v2/: spaceglenda_wrapped.car  zero.car
