[package]
authors = ["aidan46"]
description = "WASM-based CommP calculation"
edition = "2024"
name = "wasm-commp"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
byte-slice-cast = "1.2.3"
primitives = { git = "https://github.com/eigerco/polka-storage", version = "0.1.0" }
rs_merkle = "1.5.0"
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.8"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
